--- a/ElectricCarPurchaseProgram/src/main/resources/templates/listElectricCars.html
+++ b/ElectricCarPurchaseProgram/src/main/resources/templates/listElectricCars.html
@@ -40,7 +40,7 @@ p {
 <body>
 <div class="BMW">
     <button onclick="myFunction()" class="dropbtn">BMW</button>
-    <div id="myBMW" class="dropdown-content">
+    <div identity="myBMW" class="dropdown-content">
         <a href="https://www.youtube.com/watch?v=Meif6leYjmc">5 series Review</a>
         <br>
         <a href="https://www.topgear.com/car-reviews/bmw/i3">I3 Review</a>
@@ -54,7 +54,7 @@ p {
 
 <div class="Honda">
     <button onclick="myFunction()" class="dropbtn">Honda</button>
-    <div id="myHONDA" class="dropdown-content">
+    <div identity="myHONDA" class="dropdown-content">
         <a href="https://www.whatcar.com/honda/cr-v/estate/review/">SR-V
             review</a>
 
@@ -68,7 +68,7 @@ p {
 
 <div class="Hyundai">
     <button onclick="myFunction()" class="dropbtn">Hyundai</button>
-    <div id="myHyundai" class="dropdown-content">
+    <div identity="myHyundai" class="dropdown-content">
         <a href="https://cars.usnews.com/cars-trucks/hyundai/sonata">E Sonata review</a>
         <br>
         <a href="https://www.whatcar.com/hyundai/ioniq/saloon/review/">Ioniq review</a>
@@ -81,7 +81,7 @@ p {
 
 <div class="Kia">
     <button onclick="myFunction()" class="dropbtn">Kia</button>
-    <div id="myKia" class="dropdown-content">
+    <div identity="myKia" class="dropdown-content">
         <a href="https://www.whatcar.com/kia/soul/hatchback/review/">Soul review</a>
     </div>
 </div>
@@ -91,7 +91,7 @@ p {
 
 <div class="Renault">
     <button onclick="myFunction()" class="dropbtn">Renault</button>
-    <div id="myRenault" class="dropdown-content">
+    <div identity="myRenault" class="dropdown-content">
         <a href="https://www.youtube.com/watch?v=IbF3dFC3tyA/">E-Megan review</a>
         <br>
         <a href="https://www.whatcar.com/renault/zoe/hatchback/review/">Zoe review</a>
@@ -103,7 +103,7 @@ p {
 <div class="Smart
 ">
     <button onclick="myFunction()" class="dropbtn">Smart</button>
-    <div id="mySmart" class="dropdown-content">
+    <div identity="mySmart" class="dropdown-content">
         <a href="https://www.youtube.com/watch?v=1pD4QaErg8A/">Smart FourFour</a>
         <br>
         <a href="https://www.youtube.com/watch?v=-ey9sIBSFpU">Smart FourTwo</a>
@@ -116,7 +116,7 @@ p {
 <body>
 <div class="Volkswagen">
     <button onclick="myFunction()" class="dropbtn">Volkswagen</button>
-    <div id="myVolkswagen" class="dropdown-content">
+    <div identity="myVolkswagen" class="dropdown-content">
         <a href="https://www.whatcar.com/volkswagen/e-golf/hatchback/review/">Volkswagen E-Golf</a>
         <br>
         <a href="https://www.whatcar.com/volkswagen/e-up/city-car/review/">Volkswagen E-UP</a>
